infra/traefik-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: traefik-gateway
  namespace: traefik

spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: portfolio-prod

    - name: websecure
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: portfolio-prod
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: tls-hridaya-tech
            namespace: traefik
